--- a/css/styles-d.sass
+++ b/css/styles-d.sass
@@ -1,3 +1,5 @@
+// The following styles designed for 1366 width
+    
 nav, .section-slogan, #section-location-container, .section-classes, .section-welcomed, .committed, .section-collage, .section-schedule, .section-footer 
     border-top-width: 3px
 
@@ -13,10 +15,10 @@ nav > img
 nav img:nth-of-type(2) 
     display: initial
     
-nav div
+div#lg-screen-LODO
     margin: auto 20px
     padding: initial
-    flex-basis: 100%
+    min-width: 200px
     
 a#m-nav
     display: none
@@ -27,9 +29,12 @@ nav ul
     
 nav ul:first-of-type
     order: initial
+    justify-content: flex-start
     
 nav ul:last-of-type
     order: initial
+    min-width: 381px
+    justify-content: flex-end
     
 nav li 
     margin: auto 20px
@@ -44,6 +49,8 @@ nav h6
     height: 100vh
     background-image: url("../images/doberman_pinscher-cutout-v8-BG-d.png")
     margin-top: 30px
+    align-items: center
+    padding: 0
     
 .splash:after 
     background-image: url("../images/doberman_pinscher-cutout-v8-doberman-leaves-bright.png")
@@ -60,6 +67,7 @@ nav h6
 .section-slogan 
     height: 380px
     flex-direction: initial
+    overflow: scroll
     
 .slogan-box1 
     justify-content: initial
@@ -158,7 +166,6 @@ nav h6
 
 
 .section-schedule 
-    padding: 0px 200px
     padding-bottom: 50px
 
 
@@ -171,14 +178,122 @@ nav h6
 .footerB span 
     font-size: 24px
 
+// @media screen and (min-width: 1500px)
+//     nav ul:first-of-type
+//         justify-content: flex-start
+    
+//     nav ul:last-of-type
+//         justify-content: flex-end
+
+@media screen and (max-width: 1300px)
+
+    nav img:nth-of-type(1)
+        order: -2 
+
+    div#lg-screen-LODO
+        order: -1
+
+    nav ul:first-of-type
+        justify-content: flex-end
+
+    nav ul:last-of-type
+        min-width: initial
+
+    nav ul
+        flex: none
+
+    nav h6
+        text-align: initial
 
 
+@media screen and (max-width: 1050px)
+
+    div#lg-screen-LODO
+        display: none
+        min-width: initial
+        // flex: none
+    
+    #sm-screen-LODO
+        display: initial
+        margin: 5px 20px
+        flex: auto
+
+    #sm-screen-LODO h5
+        font-family: 'Montserrat', sans-serif
+        margin: 0
+        font-size: 28px
+        font-weight: 600
+        color: #f2f2f2
+
+
+@media screen and (max-width: 950px)
+
+    nav ul a
+        font-size: 16px
+
+    nav li
+        margin: auto 10px
+    
+    .splash-child
+        background-image: url(../images/title-outlines-m4-redline.svg)
+        $title-width-m: 55vw
+        width: $title-width-m
+        height: 30vw // = $title-width-m / 1.83377253621 //2.24860210493 -m3 //2.7574371535 -m2 //3.2177827799662352279122115925718 -m
+        background-size: cover
     
 
-    
+@media screen and (max-width: 760px)
 
-
+    // for nav, rollback to mobile styles (undo desktop styles)
+    nav
+        flex-wrap: wrap
     
+    nav img:nth-of-type(2) 
+        display: none
+
+    a#m-nav
+        display: block
+
+    a#m-nav > img
+        height: 36px
+        padding-top: 2px
+
+    nav > ul
+        display: none
+        flex-basis: 100%
+        background-color: #8B1616
+
+    div#lg-screen-LODO
+        display: block
+    
+    div#lg-screen-LODO h6
+        text-align: center
+    
+    #sm-screen-LODO
+        display: none
+    
+    nav ul:first-of-type
+        // justify-content: flex-start
+        order: 11
+
+    nav ul:last-of-type
+        // justify-content: flex-end
+        order: 12
+        
+    nav li 
+        margin: 20px auto
+
+    ul:hover, ul:hover ~ ul
+        display: initial
+        height: auto
+
+    div#dropdown ul
+        display: flex
+        flex-direction: column
+        width: 360px
+        margin-left: auto
+        background-color: #8B1616
+
 
 
 
