--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -39,19 +39,20 @@ nav
     height: 60px
     flex-wrap: wrap
 
+#sm-screen-LODO
+    display: none
+
 nav > img 
     /* mobile */
     padding: 0 10px
     height: 45px
 
 nav img:nth-of-type(2) 
-    transform: rotateY(180deg)
     /* mobile */
     display: none
 
-nav div
+div#lg-screen-LODO
     flex: 1
-    margin: auto 20px
     /* mobile */
     margin: 0
     padding: 0 10px
@@ -64,7 +65,7 @@ a#m-nav
     order: 10
 
 /* mobile */
-a#m-nav:hover ~ ul
+a#m-nav:hover ~ div#dropdown
     display: initial
     height: auto
     
@@ -75,6 +76,11 @@ a#m-nav > img
     display: block
     margin: 0 auto
 
+div#dropdown
+    display: none
+    order: 11
+    width: 100%
+
 nav ul 
     flex: 1
     list-style-type: none
@@ -82,9 +88,11 @@ nav ul
     padding: 0
     height: 100%
     /* mobile */
-    display: none
     flex-basis: 100%
     background-color: #8B1616
+
+nav > ul
+    display: none
 
 nav ul:first-of-type
     justify-content: flex-start
@@ -136,10 +144,11 @@ nav a:hover
     background-attachment: fixed
     display: flex
     justify-content: center
-    align-items: center
     /* mobile */
+    padding-top: 50px
+    padding-bottom: 190px
     width: 100%
-    height: 370px
+    // height: 370px
     margin-top: 60px
     background-image: url("../images/doberman_pinscher-cutout-v8-BG-d-dark.png")
 
@@ -157,7 +166,7 @@ nav a:hover
     background-image: url("../images/doberman_pinscher-cutout-v8-doberman-leaves-bright-m2-stroke.png")
 
 .splash-child 
-    position: relative
+    // position: relative
     z-index: 2
     /* mobile */
     $title-width-m: 85vw
@@ -165,7 +174,7 @@ nav a:hover
     height: $title-width-m / 1.83377253621 //2.24860210493 -m3 //2.7574371535 -m2 //3.2177827799662352279122115925718 -m
     background-size: cover
     background-image: url("../images/title-outlines-m4-redline.svg")
-    top: -10vh
+    // top: -10vh
 
 .splash h1 
     align-self: center
@@ -579,10 +588,12 @@ nav a:hover
     flex-direction: column
     align-items: center
     border-top-color: #006464
-    padding: 0px 200px
     padding-bottom: 50px
     /* mobile */
     padding: 0
+
+#calendar
+    width: 90%
 
 
 .section-footer 
