--- a/css/styles-d.css
+++ b/css/styles-d.css
@@ -86,12 +86,10 @@ nav h6 {
 }
 
 .section-slogan {
-  height: 380px;
   -webkit-box-orient: initial;
   -webkit-box-direction: initial;
       -ms-flex-direction: initial;
           flex-direction: initial;
-  overflow: scroll;
 }
 
 .slogan-box1 {
@@ -101,12 +99,13 @@ nav h6 {
 }
 
 .slogan-box1 h3 {
-  margin: 90px;
+  margin: 50px;
   font-size: 28px;
   padding: 30px;
-  border-top: 2px solid #B7B7B7;
-  border-bottom: 2px solid #B7B7B7;
-  min-width: 610px;
+}
+
+.slogan-box1 h3 br {
+  display: none;
 }
 
 .slogan-box1 img:first-of-type {
@@ -121,16 +120,15 @@ nav h6 {
 .slogan-box2 {
   height: initial;
   background-image: url("../images/slogan-e-cb-trans.png");
+  -webkit-box-flex: 0;
+      -ms-flex: 0 2 40%;
+          flex: 0 2 40%;
 }
 
 .section-location {
-  background-image: url(../images/map-hires-crop.png);
+  background-image: url(../images/map-hires-crop-s.png);
   height: 430px;
   min-width: 1366px;
-}
-
-.section-location h3 {
-  max-width: initial;
 }
 
 .location {
@@ -169,7 +167,7 @@ nav h6 {
           order: initial;
 }
 
-.grid-classes a:nth-child(n+5) {
+.grid-classes a:nth-child(n) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -288,6 +286,19 @@ nav h6 {
     font-weight: 600;
     color: #f2f2f2;
   }
+  .slogan-box1 h3 {
+    font-size: 20px;
+    line-height: 42px;
+  }
+  .section-welcomed {
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .welcomed {
+    border-radius: 20px;
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 950px) {
@@ -302,6 +313,9 @@ nav h6 {
     width: 55vw;
     height: 30vw;
     background-size: cover;
+  }
+  .section-welcomed {
+    height: 500px;
   }
 }
 
@@ -363,6 +377,87 @@ nav h6 {
     width: 360px;
     margin-left: auto;
     background-color: #8B1616;
+  }
+  div#dropdown:hover {
+    display: initial;
+    height: auto;
+  }
+  .section-slogan {
+    /* mobile */
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+  }
+  .slogan-box1 {
+    /* mobile */
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .slogan-box1 h3 {
+    /* mobile */
+    padding: 40px 20px;
+    margin: 0;
+    border: none;
+    font-size: 18px;
+  }
+  .slogan-box1 img:first-of-type {
+    /* mobile */
+    left: -20px;
+  }
+  .slogan-box1 img:nth-of-type(2) {
+    /* mobile */
+    right: -20px;
+    bottom: 30px;
+  }
+  .slogan-box2 {
+    /* mobile */
+    height: 298px;
+    background-image: url("../images/slogan-e-trans-mobile.jpg");
+    -webkit-box-flex: initial;
+        -ms-flex: initial;
+            flex: initial;
+  }
+  .section-location {
+    /* mobile */
+    height: 468px;
+    background-image: url(../images/map-m-light.png);
+    min-width: 360px;
+    /* d additions */
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .section-location h3 {
+    /* mobile */
+  }
+  .location {
+    /* mobile */
+    position: static;
+    /* d additions */
+    display: initial;
+    -ms-flex-preferred-size: 200px;
+        flex-basis: 200px;
+  }
+  /* mobile */
+  .location img {
+    display: none;
+  }
+  .location h6 {
+    /* mobile */
+    font-size: 24px;
+  }
+  .grid-classes a:nth-child(n+6) {
+    display: none;
+  }
+  .section-welcomed {
+    height: 400px;
+  }
+  .section-welcomed h3 {
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=styles-d.css.map */
