--- a/css/styles-d.sass
+++ b/css/styles-d.sass
@@ -65,20 +65,26 @@ nav h6
     
 
 .section-slogan 
-    height: 380px
+    // height: 380px
     flex-direction: initial
-    overflow: scroll
+    // overflow: scroll
     
 .slogan-box1 
     justify-content: initial
     
 .slogan-box1 h3 
-    margin: 90px
+    margin: 50px
     font-size: 28px
     padding: 30px
-    border-top: 2px solid #B7B7B7
-    border-bottom: 2px solid #B7B7B7
-    min-width: 610px
+    // border-top: 2px solid #B7B7B7
+    // border-bottom: 2px solid #B7B7B7
+    // min-width: 610px
+
+// .slogan-box1 span.nbsp
+//     display: none
+
+.slogan-box1 h3 br
+    display: none
     
 .slogan-box1 img:first-of-type
     left: 30px
@@ -90,15 +96,17 @@ nav h6
 .slogan-box2 
     height: initial
     background-image: url("../images/slogan-e-cb-trans.png")
+    // min-width: 530px
+    flex: 0 2 40%
 
 
 .section-location 
-    background-image: url(../images/map-hires-crop.png)
+    background-image: url(../images/map-hires-crop-s.png)
     height: 430px
     min-width: 1366px
 
-.section-location h3 
-    max-width: initial
+// .section-location h3 
+//     max-width: initial
 
 .location 
     position: absolute
@@ -124,7 +132,7 @@ nav h6
     justify-content: center
     order: initial
     
-.grid-classes a:nth-child(n+5)
+.grid-classes a:nth-child(n)
     display: flex
     
 .grid-classes a
@@ -178,6 +186,7 @@ nav h6
 .footerB span 
     font-size: 24px
 
+
 // @media screen and (min-width: 1500px)
 //     nav ul:first-of-type
 //         justify-content: flex-start
@@ -225,6 +234,18 @@ nav h6
         font-weight: 600
         color: #f2f2f2
 
+    .slogan-box1 h3
+        font-size: 20px
+        line-height: 42px
+
+
+    .section-welcomed
+        align-items: flex-end
+
+    .welcomed
+        border-radius: 20px
+        text-align: center
+
 
 @media screen and (max-width: 950px)
 
@@ -240,6 +261,9 @@ nav h6
         width: $title-width-m
         height: 30vw // = $title-width-m / 1.83377253621 //2.24860210493 -m3 //2.7574371535 -m2 //3.2177827799662352279122115925718 -m
         background-size: cover
+
+    .section-welcomed
+        height: 500px
     
 
 @media screen and (max-width: 760px)
@@ -294,6 +318,78 @@ nav h6
         margin-left: auto
         background-color: #8B1616
 
+    div#dropdown:hover
+        display: initial
+        height: auto
 
 
+    .section-slogan 
+        /* mobile */
+        flex-direction: column
+        height: auto
 
+    .slogan-box1 
+        /* mobile */
+        justify-content: center
+
+    .slogan-box1 h3 
+        /* mobile */
+        padding: 40px 20px
+        margin: 0
+        border: none
+        font-size: 18px
+
+    .slogan-box1 img:first-of-type
+        /* mobile */
+        left: -20px
+
+    .slogan-box1 img:nth-of-type(2)
+        /* mobile */
+        right: -20px
+        bottom: 30px
+
+    .slogan-box2 
+        /* mobile */
+        height: 298px
+        background-image: url("../images/slogan-e-trans-mobile.jpg")
+        flex: initial
+
+
+    .section-location 
+        /* mobile */
+        height: 468px
+        background-image: url(../images/map-m-light.png)
+        min-width: 360px
+        /* d additions */
+        width: 100%
+        display: flex
+        // flex-wrap: wrap
+
+    .section-location h3 
+        /* mobile */
+        // max-width: 352px
+
+    .location 
+        /* mobile */
+        position: static
+        /* d additions */
+        display: initial
+        flex-basis: 200px
+        
+    /* mobile */
+    .location img
+        display: none
+
+    .location h6 
+        /* mobile */
+        font-size: 24px
+
+        
+    .grid-classes a:nth-child(n+6)
+        display: none
+
+    .section-welcomed
+        height: 400px
+
+    .section-welcomed h3
+        font-size: 20px
