--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -112,6 +112,10 @@ nav li
     background-color: #414141
     color: #FFC99D
 
+a.active:hover
+    background-color: #414141
+    color: #FFC99D
+
 nav h6 
     font-family: 'Montserrat', sans-serif
     margin: 0
@@ -236,7 +240,6 @@ nav a:hover
     bottom: 30px
 
 .slogan-box2 
-    flex: 0 2 40%
     background-size: 100%
     background-position: center 70%
     position: relative
@@ -279,6 +282,7 @@ nav a:hover
     height: 468px
     background-image: url(../images/map-m-light.png)
     min-width: 360px
+    width: 100%
 
 .section-location h3 
     font-family: 'Montserrat', sans-serif //'Krub'
@@ -330,7 +334,7 @@ nav a:hover
     display: none
 
 .location h6 
-    margin: 0
+    margin: 5px
     color: #88000C //#DE1426
     font-family: 'Montserrat', sans-serif
     font-weight: 600
@@ -345,35 +349,35 @@ nav a:hover
  
 #glendora 
     top: 20.9%
-    left: 19.4%
+    left: 19.4% + 4%
 
 #alta-loma 
     top: 20.9%
-    left: 62.2%
+    left: 62.2% + 4%
 
 #la-verne 
     top: 39.5%
-    left: 32.9%
+    left: 32.9% + 4%
 
 #claremont 
     top: 41.9%
-    left: 41.7%
+    left: 41.7% + 4%
 
 #montclair 
     top: 55.1%
-    left: 47.6%
+    left: 47.6% + 4%
 
 #upland 
     top: 41.9%
-    left: 54.5%
+    left: 54.5% + 4%
 
 #ranchocuca 
     top: 39.5%
-    left: 62.6%
+    left: 62.6% + 4%
 
 #diamond-bar 
     top: 77.9%
-    left: 28.9%
+    left: 28.9% + 4%
 
 
 .section-classes 
@@ -657,4 +661,80 @@ nav a:hover
     color: #484848
     margin-top: 50px
 
+    
+@media screen and (max-width: 360px)
 
+    .slogan-box2
+        height: 265px
+
+
+// ***************************** Classes page *****************************
+
+#classesPg-section-grid
+    margin-top: 60px
+    display: flex
+    flex-wrap: wrap
+    padding: 20px 0
+    background-color: #f0f0f0
+
+.class-card
+    // min-width: 340px
+    // max-width: 540px
+    flex-basis: 340px
+    flex-grow: 1
+    padding: 20px
+    padding-top: 0
+    color: #484848
+    
+.class-card p
+    line-height: 1.5em
+    // font-weight: 300
+    font-size: 16px
+    font-family: 'Noto Sans KR', sans-serif
+
+img.card-pic
+    max-width: 100%
+    border-radius: 10px
+
+img.card-icon
+    width: 40px
+    margin-right: 20px
+
+.card-title-container
+    display: flex
+
+.class-card ul 
+    // font-family: 'Montserrat', sans-serif
+    font-family: cursive
+    font-size: 20px
+    font-weight:  500
+    color: #3D93B3  //#006464
+    list-style-image: url('../images/bone-icon.png')
+    padding-left: 30px
+
+.class-card li
+    line-height: 1.25em
+    margin: 10px 0
+
+#classesPg-section-grid h3
+    font-size: 26px
+    color: #171717 //#AD2532
+    // font-family: 'Krub', sans-serif
+    font-family: 'Dosis', sans-serif
+    font-weight:  800
+    margin: 18px 0
+
+// .class-card:nth-child(4n), .class-card:nth-child(4n+1)
+//     background-color: #f4f4f4
+
+
+@media screen and (min-width: 501px)
+   
+    #classesPg-section-grid
+        margin-top: 42px
+        padding: 30px 10px
+
+@media screen and (min-width: 760px)
+  
+    #classesPg-section-grid
+        padding: 40px
