classes page changes

--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -704,11 +704,11 @@ img.card-icon
     display: flex
 
 .class-card ul 
-    // font-family: 'Montserrat', sans-serif
-    font-family: cursive
+    font-family: 'Montserrat', 'Comic Sans', sans-serif
+    // font-family: 'Comic Sans', cursive
     font-size: 20px
     font-weight:  500
-    color: #3D93B3  //#006464
+    color: #347E99 //#3D93B3  //#006464
     list-style-image: url('../images/bone-icon.png')
     padding-left: 30px
 
@@ -723,6 +723,24 @@ img.card-icon
     font-family: 'Dosis', sans-serif
     font-weight:  800
     margin: 18px 0
+
+.alert
+    // display: flex
+    color: #ffffff
+    background-color: #A60000
+    border-radius: 10px
+    padding: 16px
+
+.alert img
+    // height: 50%
+    width: 56px
+    margin-right: 16px
+    margin-bottom: 16px
+    float: left
+    // margin: 10px
+
+.alert p 
+    margin: 0
 
 // .class-card:nth-child(4n), .class-card:nth-child(4n+1)
 //     background-color: #f4f4f4
