--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -955,10 +955,10 @@ img.card-icon {
 }
 
 .class-card ul {
-  font-family: cursive;
+  font-family: 'Montserrat', 'Comic Sans', sans-serif;
   font-size: 20px;
   font-weight: 500;
-  color: #3D93B3;
+  color: #347E99;
   list-style-image: url("../images/bone-icon.png");
   padding-left: 30px;
 }
@@ -974,6 +974,24 @@ img.card-icon {
   font-family: 'Dosis', sans-serif;
   font-weight: 800;
   margin: 18px 0;
+}
+
+.alert {
+  color: #ffffff;
+  background-color: #A60000;
+  border-radius: 10px;
+  padding: 16px;
+}
+
+.alert img {
+  width: 56px;
+  margin-right: 16px;
+  margin-bottom: 16px;
+  float: left;
+}
+
+.alert p {
+  margin: 0;
 }
 
 @media screen and (min-width: 501px) {
