--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -917,18 +917,35 @@ nav a:hover {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: 20px 0;
   background-color: #f0f0f0;
 }
 
+#classesPg-section-grid h1 {
+  text-align: center;
+  font-family: 'Noto Sans KR', sans-serif;
+  color: #414141;
+  width: 100%;
+  padding: 10px 20px;
+  padding-top: 28px;
+  font-size: 32px;
+}
+
+.class-card-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border-bottom: 6px solid #A60000;
+}
+
 .class-card {
-  -ms-flex-preferred-size: 340px;
-      flex-basis: 340px;
+  -ms-flex-preferred-size: 500px;
+      flex-basis: 500px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  padding: 20px;
-  padding-top: 0;
+  padding: 0 20px;
   color: #484848;
 }
 
@@ -941,6 +958,8 @@ nav a:hover {
 img.card-pic {
   max-width: 100%;
   border-radius: 10px;
+  margin: 20px 0;
+  display: block;
 }
 
 img.card-icon {
@@ -977,21 +996,28 @@ img.card-icon {
 }
 
 .alert {
-  color: #ffffff;
-  background-color: #A60000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #1b1b1b;
+  background-color: #ff8b8b;
   border-radius: 10px;
   padding: 16px;
+  margin: 20px 0;
 }
 
 .alert img {
-  width: 56px;
+  width: 25px;
   margin-right: 16px;
-  margin-bottom: 16px;
-  float: left;
 }
 
 .alert p {
-  margin: 0;
+  margin: auto 0;
+  font-size: 14px;
+}
+
+.yellow {
+  background-color: #ffc895;
 }
 
 @media screen and (min-width: 501px) {
@@ -1001,7 +1027,10 @@ img.card-icon {
   }
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 761px) {
+  .mobile-header {
+    display: none;
+  }
   #classesPg-section-grid {
     padding: 40px;
   }
