--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -20,7 +20,7 @@ h2, h3
     color: #484848
 
 
-nav, .section-slogan, #section-location-container, .section-classes, .section-welcomed, .committed, .section-collage, .section-schedule, .section-footer 
+nav, .section-slogan, #section-location-container, .section-classes, .section-welcomed, .committed, .section-collage, .section-schedule, .section-footer
     border-top: 3px solid #484848
     /* mobile */
     border-top: 6px solid #484848
@@ -670,20 +670,35 @@ nav a:hover
 
 // ***************************** Classes page *****************************
 
+
 #classesPg-section-grid
     margin-top: 60px
     display: flex
     flex-wrap: wrap
-    padding: 20px 0
+    // padding: 20px 0
     background-color: #f0f0f0
+    
+#classesPg-section-grid h1
+    text-align: center
+    font-family: 'Noto Sans KR', sans-serif
+    // background-color: #414141
+    color: #414141 //#FFFFFF //#FFC99D
+    width: 100%
+    padding: 10px 20px
+    padding-top: 28px
+    font-size: 32px
+
+.class-card-container
+    display: flex
+    flex-wrap: wrap
+    border-bottom: 6px solid #A60000
 
 .class-card
     // min-width: 340px
     // max-width: 540px
-    flex-basis: 340px
+    flex-basis: 500px
     flex-grow: 1
-    padding: 20px
-    padding-top: 0
+    padding: 0 20px
     color: #484848
     
 .class-card p
@@ -695,6 +710,8 @@ nav a:hover
 img.card-pic
     max-width: 100%
     border-radius: 10px
+    margin: 20px 0
+    display: block
 
 img.card-icon
     width: 40px
@@ -725,22 +742,25 @@ img.card-icon
     margin: 18px 0
 
 .alert
-    // display: flex
-    color: #ffffff
-    background-color: #A60000
+    display: flex
+    color: #1b1b1b
+    background-color: #ff8b8b //ff4848 //e54141
     border-radius: 10px
     padding: 16px
+    margin: 20px 0
 
 .alert img
     // height: 50%
-    width: 56px
+    width: 25px
     margin-right: 16px
-    margin-bottom: 16px
-    float: left
     // margin: 10px
 
 .alert p 
-    margin: 0
+    margin: auto 0
+    font-size: 14px
+
+.yellow
+    background-color: #ffc895 //ffb066
 
 // .class-card:nth-child(4n), .class-card:nth-child(4n+1)
 //     background-color: #f4f4f4
@@ -752,7 +772,10 @@ img.card-icon
         margin-top: 42px
         padding: 30px 10px
 
-@media screen and (min-width: 760px)
+@media screen and (min-width: 761px)
   
+    .mobile-header
+        display: none
+
     #classesPg-section-grid
         padding: 40px
