--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -280,14 +280,14 @@ nav a:hover {
 .slogan-box1 h3 {
   text-align: center;
   line-height: 60px;
-  font-weight: 400;
+  font-weight: 500;
   position: relative;
   max-width: 860px;
   /* mobile */
   padding: 40px 20px;
   margin: 0;
   border: none;
-  font-size: 18px;
+  font-size: 22px;
 }
 
 .slogan-box1 span {
@@ -766,6 +766,28 @@ nav a:hover {
   margin-bottom: 0;
 }
 
+#quote-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  line-height: 30px;
+}
+
+#quote-name {
+  margin-top: 0px;
+  font-weight: 600;
+}
+
+#quote-box span:last-of-type {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  line-height: 0px;
+}
+
 .committed h3 {
   font-size: 30px;
   font-weight: 600;
@@ -779,10 +801,21 @@ nav a:hover {
   font-size: 20px;
 }
 
+.committed h4 {
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 .committed span {
   font-size: 46px;
   /* mobile */
-  font-size: 30px;
+  font-size: 40px;
+  margin: 0 10px;
+}
+
+.committed p {
+  margin: 0 10px;
 }
 
 .section-collage {
@@ -918,6 +951,13 @@ nav a:hover {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   background-color: #f0f0f0;
+  grid-column-gap: 40px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
 
 #classesPg-section-grid h1 {
@@ -925,9 +965,10 @@ nav a:hover {
   font-family: 'Noto Sans KR', sans-serif;
   color: #414141;
   width: 100%;
-  padding: 10px 20px;
-  padding-top: 28px;
+  padding: 20px 20px;
   font-size: 32px;
+  letter-spacing: 3px;
+  font-weight: 600;
 }
 
 .class-card-container {
@@ -936,10 +977,15 @@ nav a:hover {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  border-bottom: 6px solid #A60000;
+  padding-bottom: 30px;
+  -ms-flex-preferred-size: 450px;
+      flex-basis: 450px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
-.class-card {
+.card-item {
   -ms-flex-preferred-size: 500px;
       flex-basis: 500px;
   -webkit-box-flex: 1;
@@ -949,17 +995,17 @@ nav a:hover {
   color: #484848;
 }
 
-.class-card p {
+p.card-item {
   line-height: 1.5em;
   font-size: 16px;
   font-family: 'Noto Sans KR', sans-serif;
+  margin: 20px 0;
+  margin-bottom: 0;
 }
 
 img.card-pic {
   max-width: 100%;
-  border-radius: 10px;
-  margin: 20px 0;
-  display: block;
+  padding: 0;
 }
 
 img.card-icon {
@@ -967,24 +1013,19 @@ img.card-icon {
   margin-right: 20px;
 }
 
-.card-title-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.class-card ul {
+ul.card-item {
   font-family: 'Montserrat', 'Comic Sans', sans-serif;
   font-size: 20px;
   font-weight: 500;
   color: #347E99;
   list-style-image: url("../images/bone-icon.png");
-  padding-left: 30px;
+  padding-left: 40px;
+  margin: 20px 0;
+  margin-bottom: 0;
 }
 
-.class-card li {
-  line-height: 1.25em;
-  margin: 10px 0;
+.card-item li {
+  margin-top: 5px;
 }
 
 #classesPg-section-grid h3 {
@@ -992,7 +1033,8 @@ img.card-icon {
   color: #171717;
   font-family: 'Dosis', sans-serif;
   font-weight: 800;
-  margin: 18px 0;
+  margin: 20px 0;
+  margin-bottom: 0;
 }
 
 .alert {
@@ -1003,7 +1045,8 @@ img.card-icon {
   background-color: #ff8b8b;
   border-radius: 10px;
   padding: 16px;
-  margin: 20px 0;
+  margin: 20px 20px;
+  margin-bottom: 0;
 }
 
 .alert img {
@@ -1020,6 +1063,10 @@ img.card-icon {
   background-color: #ffc895;
 }
 
+img#ears {
+  margin-top: -28px;
+}
+
 @media screen and (min-width: 501px) {
   #classesPg-section-grid {
     margin-top: 42px;
@@ -1034,5 +1081,53 @@ img.card-icon {
   #classesPg-section-grid {
     padding: 40px;
   }
+}
+
+#aboutPg-section-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #be5151;
+  color: #fff;
+  margin-top: 54px;
+  text-align: center;
+}
+
+#aboutPg-section-main h1 {
+  font-size: 34px;
+  text-align: center;
+  padding: 15px 0;
+  width: 90%;
+}
+
+#aboutPg-section-main img {
+  width: 90%;
+  margin-top: 35px;
+  margin-bottom: 5px;
+}
+
+#aboutPg-section-main h5 {
+  font-size: 20px;
+  margin: 0;
+  width: 90%;
+}
+
+#aboutPg-section-main h6 {
+  font-size: 16px;
+  margin: 10px 0;
+  margin-top: 0;
+  font-weight: 400;
+  width: 90%;
+}
+
+#aboutPg-section-main p {
+  width: 90%;
 }
 /*# sourceMappingURL=styles-m.css.map */
