--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -1067,10 +1067,83 @@ img#ears {
   margin-top: -28px;
 }
 
+#aboutPg-section-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #be5151;
+  color: #fff;
+  margin-top: 60px;
+  text-align: center;
+  padding: 0 3%;
+  width: 100%;
+}
+
+.aboutPg-card {
+  max-width: 450px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 400px;
+          flex: 1 1 400px;
+  margin: 10px;
+}
+
+.aboutPg-card.bigCard {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+}
+
+.aboutPg-card:first-of-type {
+  -webkit-box-ordinal-group: -1;
+      -ms-flex-order: -2;
+          order: -2;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+#aboutPg-section-main h1 {
+  font-size: 34px;
+  text-align: center;
+  padding: 15px 0;
+}
+
+#aboutPg-section-main img {
+  width: 100%;
+  margin-top: 35px;
+  margin-bottom: 5px;
+}
+
+#aboutPg-section-main h5 {
+  font-size: 20px;
+  margin: 0;
+}
+
+#aboutPg-section-main h6 {
+  font-size: 16px;
+  margin: 10px 0;
+  margin-top: 0;
+  font-weight: 400;
+}
+
 @media screen and (min-width: 501px) {
   #classesPg-section-grid {
     margin-top: 42px;
     padding: 30px 10px;
+  }
+  #aboutPg-section-main {
+    margin-top: 42px;
   }
 }
 
@@ -1081,53 +1154,5 @@ img#ears {
   #classesPg-section-grid {
     padding: 40px;
   }
-}
-
-#aboutPg-section-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #be5151;
-  color: #fff;
-  margin-top: 54px;
-  text-align: center;
-}
-
-#aboutPg-section-main h1 {
-  font-size: 34px;
-  text-align: center;
-  padding: 15px 0;
-  width: 90%;
-}
-
-#aboutPg-section-main img {
-  width: 90%;
-  margin-top: 35px;
-  margin-bottom: 5px;
-}
-
-#aboutPg-section-main h5 {
-  font-size: 20px;
-  margin: 0;
-  width: 90%;
-}
-
-#aboutPg-section-main h6 {
-  font-size: 16px;
-  margin: 10px 0;
-  margin-top: 0;
-  font-weight: 400;
-  width: 90%;
-}
-
-#aboutPg-section-main p {
-  width: 90%;
 }
 /*# sourceMappingURL=styles-m.css.map */
